--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "fastapi[standard]>=0.124.4",
     "psycopg2-binary>=2.9.11",
     "psycopg[binary]>=3.3.2",
+    "sqladmin[full]>=0.22.0",
     "sqlalchemy>=2.0.45",
     "sqlmodel>=0.0.27",
 ]
